<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
	android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movietitle" />

        <EditText
            android:id="@+id/movieTitleET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
    </LinearLayout>

    <Button
        android:id="@+id/addMovieBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addmovie" />

    <Button
        android:id="@+id/cancelMovieBTN"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>